--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,20 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
+    <distributionManagement>
+        <repository>
+            <id>cosmos-ftp-repo</id>
+            <url>ftp://cosmosrepo.devrosemberg.com</url>
+        </repository>
+    </distributionManagement>
+   <build>
+    <extensions>
+        <extension>
+            <groupId>org.apache.maven.wagon</groupId>
+            <artifactId>wagon-ftp</artifactId>
+            <version>2.2</version>
+        </extension>
+    </extensions>
+</build>
 
 </project>
